WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
19520
WebKit incorrectly accepts hidden as the value of outline-style
https://bugs.webkit.org/show_bug.cgi?id=19520
Summary
WebKit incorrectly accepts hidden as the value of outline-style
Anthony Ricaud
Reported
2008-06-12 08:38:46 PDT
outline-style: hidden is illegal but WebKit renders it.
http://www.w3.org/TR/CSS21/ui.html#dynamic-outlines
The 'outline-style' property accepts the same values as 'border-style', except that 'hidden' is not a legal outline style.
Attachments
Proposed patch for the issue
(15.60 KB, patch)
2008-06-12 15:08 PDT
,
Robert Blaut
no flags
Details
Formatted Diff
Diff
updated patch with text only test case
(5.95 KB, patch)
2008-06-12 23:03 PDT
,
Robert Blaut
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Robert Blaut
Comment 1
2008-06-12 15:08:12 PDT
Created
attachment 21665
[details]
Proposed patch for the issue
Darin Adler
Comment 2
2008-06-12 22:04:26 PDT
Comment on
attachment 21665
[details]
Proposed patch for the issue The regression test could be made a text-only test by using getComputedStyle, which I think would be better. r=me
Robert Blaut
Comment 3
2008-06-12 22:23:58 PDT
You are (In reply to
comment #2
)
> (From update of
attachment 21665
[details]
[edit]) > The regression test could be made a text-only test by using getComputedStyle, > which I think would be better.
You're absolutely right :) I'm working on it now. Updated patch will come really soon. For now I clear the review flag.
Robert Blaut
Comment 4
2008-06-12 23:03:50 PDT
Created
attachment 21675
[details]
updated patch with text only test case
Darin Adler
Comment 5
2008-06-13 14:01:30 PDT
Comment on
attachment 21675
[details]
updated patch with text only test case r=me
Mark Rowe (bdash)
Comment 6
2008-06-22 17:59:14 PDT
Landed in
r34732
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug