2008-06-22  Robert Blaut  <webkit@blaut.biz>

Reviewed by Darin Adler.

        Fix https://bugs.webkit.org/show_bug.cgi?id=19520
        Bug 19520: WebKit incorrectly accepts hidden as the value of outline-style

        Test: fast/css/outline-hidden-illegal-value.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        * rendering/RenderFlow.cpp:
        (WebCore::RenderFlow::paintOutline):
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::paintOutline):
        * rendering/style/RenderStyle.h:
        (WebCore::RenderStyle::outlineWidth):
        (WebCore::RenderStyle::outlineOffset):


Canonical link: https://commits.webkit.org/27180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34732 268f45cc-cd09-0410-ab3c-d52691b4dbfc