WebCore/rendering/style/RenderStyle.h
@@ -1874,7 +1874,7 @@ public:
     
     unsigned short outlineSize() const { return max(0, outlineWidth() + outlineOffset()); }
     unsigned short outlineWidth() const {
-        if (background->m_outline.style() == BNONE || background->m_outline.style() == BHIDDEN)
+        if (background->m_outline.style() == BNONE)
             return 0;
         return background->m_outline.width;
     }
@@ -2025,7 +2025,7 @@ public:
     BindingURI* bindingURIs() const { return rareNonInheritedData->bindingURI; }
 #endif
     int outlineOffset() const { 
-        if (background->m_outline.style() == BNONE || background->m_outline.style() == BHIDDEN)
+        if (background->m_outline.style() == BNONE)
             return 0;
         return background->m_outline._offset;
     }
